Usage examples for ext libs
- Fix ambiguities in newer gcc versions
- Patch rlutil, misc fixes
- Discard unreachable code
- Determine CI env at runtime
    With defines, we determine the env at compile time.
    This has the drawback that the generated binaries will not work as expected outside CI.
- NULL and nullptr
    If more CI envs are added, refactor out the null check (or the function call) into a macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ include(cmake/Options.cmake)
 
 # external dependencies with find_package
 
-# find_package(Threads REQUIRED)
+find_package(Threads REQUIRED)
 
 ###############################################################################
 
@@ -46,9 +46,17 @@ include(cmake/CompilerFlags.cmake)
 # use SYSTEM so cppcheck and clang-tidy do not report warnings from these directories
 target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE generated/include)
 # target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ext/<SomeHppLib>/include)
+target_include_directories(
+    ${PROJECT_NAME} SYSTEM PRIVATE
+    ext/include/digestpp
+    ext/include/rlutil
+    ext/include/random
+    ext/include/csv-parser
+    ext/include/date
+)
 # target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${<SomeLib>_SOURCE_DIR}/include)
 # target_link_directories(${PROJECT_NAME} PRIVATE ${<SomeLib>_BINARY_DIR}/lib)
-# target_link_libraries(${PROJECT_NAME} <SomeLib>)
+target_link_libraries(${PROJECT_NAME} Threads::Threads)
 
 ###############################################################################
 
