--- a/.github/actions/cppcheck/action.yml
+++ b/.github/actions/cppcheck/action.yml
@@ -4,6 +4,10 @@ description: 'Install and run cppcheck'
 runs:
   using: "composite"
   steps:
+    - name: Install Linux Dependencies
+      if: runner.os == 'Linux'
+      uses: ./.github/actions/install-linux-deps
+
     - name: Cache cppcheck
       uses: actions/cache@v4
       id: cache-cppcheck
