--- a/.github/workflows/build-common.yml
+++ b/.github/workflows/build-common.yml
@@ -31,9 +31,9 @@ defaults:
     shell: bash
 
 jobs:
-  build:
-    name: ${{ matrix.name }}
-    runs-on: ${{ matrix.os }}
+  build-common:
+    name: test # ${{ matrix.name }}
+    runs-on: ubuntu-latest # ${{ matrix.os }}
     timeout-minutes: 8
     permissions:
       attestations: write
@@ -55,61 +55,64 @@ jobs:
       # MINGW_VER: "14.1.0posix-18.1.7-12.0.0-msvcrt-r2/winlibs-x86_64-posix-seh-gcc-14.1.0-mingw-w64msvcrt-12.0.0-r2.7z"
 
 
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJSON(inputs.matrix) }}
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: debug
+        run: echo ${{ fromJSON(inputs.matrix) }}
+    # strategy:
+    #   fail-fast: false
+    #   matrix: ${{ fromJSON(inputs.matrix) }}
 
-      - name: Set timestamp and zip name
-        run: |
-          echo "TIMESTAMP=$(date +%Y-%m-%d-%H-%M-%S)" >> ${GITHUB_ENV}
+    # steps:
+    #   - name: Checkout repo
+    #     uses: actions/checkout@v4
 
-          # use the full name as prefix: {user_name}_{repo_name} (replace / with _)
-          echo "ZIP_NAME=$(echo "${GITHUB_REPOSITORY}_${{ env.BUILD_TYPE }}_${{ matrix.os }}_${{ matrix.cxx }}${{ matrix.asan_name }}" | sed 's|/|_|')" >> ${GITHUB_ENV}
+    #   - name: Set timestamp and zip name
+    #     run: |
+    #       echo "TIMESTAMP=$(date +%Y-%m-%d-%H-%M-%S)" >> ${GITHUB_ENV}
 
-          # or use only the repo name (github does not have a predefined environment variable for this)
-          # the regex splits by / and keeps everything after / without the / character
-          # echo "ZIP_NAME=$(echo "${GITHUB_REPOSITORY}_${{ env.BUILD_TYPE }}_${{ matrix.os }}_${{ matrix.cxx }}${{ matrix.asan_name }}" | sed -E 's|.+/(.+)|\1|')" >> ${GITHUB_ENV}
+    #       # use the full name as prefix: {user_name}_{repo_name} (replace / with _)
+    #       echo "ZIP_NAME=$(echo "${GITHUB_REPOSITORY}_${{ env.BUILD_TYPE }}_${{ matrix.os }}_${{ matrix.cxx }}${{ matrix.asan_name }}" | sed 's|/|_|')" >> ${GITHUB_ENV}
 
-      - name: Install packages
-        uses: ./.github/actions/install-packages
+    #       # or use only the repo name (github does not have a predefined environment variable for this)
+    #       # the regex splits by / and keeps everything after / without the / character
+    #       # echo "ZIP_NAME=$(echo "${GITHUB_REPOSITORY}_${{ env.BUILD_TYPE }}_${{ matrix.os }}_${{ matrix.cxx }}${{ matrix.asan_name }}" | sed -E 's|.+/(.+)|\1|')" >> ${GITHUB_ENV}
 
-      - name: Configure CMake
-        uses: ./.github/actions/configure-cmake
-        with:
-          custom_flags: ${{ matrix.cmake_flags }}
-          warnings_as_errors: 'ON'
+    #   - name: Install packages
+    #     uses: ./.github/actions/install-packages
 
-      - name: Build
-        run: bash ./scripts/cmake.sh build -t ${{ env.BUILD_TYPE }}
+    #   - name: Configure CMake
+    #     uses: ./.github/actions/configure-cmake
+    #     with:
+    #       custom_flags: ${{ matrix.cmake_flags }}
+    #       warnings_as_errors: 'ON'
 
-      - name: Install
-        # Use CMake to "install" build artifacts (only interested in CMake registered targets) to our custom artifacts directory
-        run: |
-          bash ./scripts/cmake.sh install -i artifacts -t ${{ env.BUILD_TYPE }}
+    #   - name: Build
+    #     run: bash ./scripts/cmake.sh build -t ${{ env.BUILD_TYPE }}
 
-      - name: Move artifacts
-        run: |
-          mkdir ${{ env.ZIP_NAME }}
-          mv artifacts/${{ env.BIN_DIR }}/* ${{ env.ZIP_NAME }}
-          ls -la ${{ env.ZIP_NAME }}
+    #   - name: Install
+    #     # Use CMake to "install" build artifacts (only interested in CMake registered targets) to our custom artifacts directory
+    #     run: |
+    #       bash ./scripts/cmake.sh install -i artifacts -t ${{ env.BUILD_TYPE }}
 
-      - name: Process artifacts
-        uses: ./.github/actions/process-artifacts
+    #   - name: Move artifacts
+    #     run: |
+    #       mkdir ${{ env.ZIP_NAME }}
+    #       mv artifacts/${{ env.BIN_DIR }}/* ${{ env.ZIP_NAME }}
+    #       ls -la ${{ env.ZIP_NAME }}
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.ZIP_NAME }}_${{ env.TIMESTAMP }}
-          path: ${{ env.ZIP_NAME }}
-          retention-days: 30
+    #   - name: Process artifacts
+    #     uses: ./.github/actions/process-artifacts
 
-      - name: Runtime checks
-        uses: ./.github/actions/runtime-checks
+    #   - name: Upload Artifacts
+    #     uses: actions/upload-artifact@v4
+    #     with:
+    #       name: ${{ env.ZIP_NAME }}_${{ env.TIMESTAMP }}
+    #       path: ${{ env.ZIP_NAME }}
+    #       retention-days: 30
 
-      - name: Create release
-        uses: ./.github/actions/create-release
-        if: startsWith(github.ref, 'refs/tags/')
+    #   - name: Runtime checks
+    #     uses: ./.github/actions/runtime-checks
+
+    #   - name: Create release
+    #     uses: ./.github/actions/create-release
+    #     if: startsWith(github.ref, 'refs/tags/')
