--- a/.github/actions/configure-cmake/action.yml
+++ b/.github/actions/configure-cmake/action.yml
@@ -1,6 +1,11 @@
 name: 'Configure CMake'
 description: 'Common logic for CMake configuration'
-inputs:
+inputs:  
+  matrix:
+    description: 'Matrix object encoded as json'
+    required: false
+    type: string
+    default: '{}'
   warnings_as_errors:
     description: 'Treat warnings as errors'
     required: false
@@ -20,26 +25,26 @@ runs:
     #   with:
     #     path: |
     #       ${{ env.BUILD_DIR }}/_deps
-    #     key: cache-${{ matrix.cmake_generator }}-${{ matrix.os }}-${{ env.CXX }}-${{ env.BUILD_TYPE }}
+    #     key: cache-${{ fromJSON(inputs.matrix).cmake_generator }}-${{ fromJSON(inputs.matrix).os }}-${{ env.CXX }}-${{ env.BUILD_TYPE }}
 
     # NOTE: GH Actions does not allow updating the cache yet
     # Using the workaround found here: https://github.com/actions/cache/issues/171
     # Since this cache is small, it should not fill the cache too much
     - name: Cache Ninja deps
       uses: actions/cache@v4
-      if: matrix.cmake_generator == 'Ninja'
+      if: ${{ fromJSON(inputs.matrix).cmake_generator == 'Ninja' }}
       id: cache-deps-ninja
       with:
         path: |
           ${{ env.BUILD_DIR }}/.ninja_deps
           ${{ env.BUILD_DIR }}/.ninja_log
-        key: ${{ matrix.os }}-${{ matrix.cxx }}-ninja-cache-${{ hashFiles('CMakeLists.txt') }}
-        restore-keys: ${{ matrix.os }}-${{ matrix.cxx }}-ninja-cache-
+        key: ${{ fromJSON(inputs.matrix).os }}-${{ fromJSON(inputs.matrix).cxx }}-ninja-cache-${{ hashFiles('CMakeLists.txt') }}
+        restore-keys: ${{ fromJSON(inputs.matrix).os }}-${{ fromJSON(inputs.matrix).cxx }}-ninja-cache-
 
     - name: Cache MinGW
       uses: actions/cache@v4
       id: cache-mingw
-      if: runner.os == 'Windows' && matrix.cxx == 'g++'
+      if: ${{ runner.os == 'Windows' && fromJSON(inputs.matrix).cxx == 'g++' }}
       with:
         path: gcc
         key: ${{ runner.os }}-${{ env.MINGW_VER }}
@@ -47,24 +52,24 @@ runs:
     - name: Download toolchain (MinGW)
       uses: suisei-cn/actions-download-file@v1.6.0
       id: download-mingw-gcc
-      if: runner.os == 'Windows' && matrix.cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
+      if: runner.os == 'Windows' && fromJSON(inputs.matrix).cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
       with:
         url: "https://github.com/brechtsanders/winlibs_mingw/releases/download/${{ env.MINGW_VER }}"
         target: compiler/
 
     - name: Install toolchain (MinGW)
       shell: bash
-      if: runner.os == 'Windows' && matrix.cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
+      if: ${{ runner.os == 'Windows' && fromJSON(inputs.matrix).cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true' }}
       run: |
         7z x compiler/${{ steps.download-mingw-gcc.outputs.filename }} -ogcc
 
     - name: Configure CMake (MinGW)
       shell: bash
-      if: runner.os == 'Windows' && matrix.cxx == 'g++'
+      if: ${{ runner.os == 'Windows' && fromJSON(inputs.matrix).cxx == 'g++' }}
       run: |
         PATH="$(pwd)/gcc/mingw64/bin:${PATH}"
         # because GH Actions does not properly prepend to $PATH and still chooses VM gcc
-        export CMAKE_GENERATOR=${{ matrix.cmake_generator }}
+        export CMAKE_GENERATOR=${{ fromJSON(inputs.matrix).cmake_generator }}
         bash ./scripts/cmake.sh configure -s ${GITHUB_WORKSPACE} -b ${{ env.BUILD_DIR }} \
           -t ${{ env.BUILD_TYPE }} \
           -i ${GITHUB_WORKSPACE}/artifacts \
@@ -72,9 +77,9 @@ runs:
 
     - name: Configure CMake
       shell: bash
-      if: ${{ !(runner.os == 'Windows' && matrix.cxx == 'g++') }}
+      if: ${{ !(runner.os == 'Windows' && fromJSON(inputs.matrix).cxx == 'g++') }}
       run: |
-        export CMAKE_GENERATOR=${{ matrix.cmake_generator }}
+        export CMAKE_GENERATOR=${{ fromJSON(inputs.matrix).cmake_generator }}
         bash ./scripts/cmake.sh configure -s ${GITHUB_WORKSPACE} -b ${{ env.BUILD_DIR }} \
           -t ${{ env.BUILD_TYPE }} \
           -i ${GITHUB_WORKSPACE}/artifacts \
