Try to create dmg file for macOS

--- a/.github/actions/process-artifacts/action.yml
+++ b/.github/actions/process-artifacts/action.yml
@@ -18,7 +18,7 @@ runs:
         sed -i -e "s/oop/${EXECUTABLE_NAME}/" "${{ env.ZIP_NAME }}/launcher.bat"
         chmod +x "${{ env.ZIP_NAME }}/launcher.bat"
 
-    - name: Copy missing dylibs
+    - name: Copy missing dylibs and create dmg
       shell: bash
       if: runner.os == 'macOS' && matrix.cxx == 'clang++'
       run: |
@@ -29,6 +29,7 @@ runs:
         ls -1 ${{ env.ZIP_NAME }}/lib | grep framework | xargs -I% ls ${{ env.ZIP_NAME }}/lib/%/Versions/A | grep -v "Resources" | xargs -I% install_name_tool -change @rpath/../Frameworks/%.framework/Versions/A/% @executable_path/lib/%.framework/Versions/A/% ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app/Contents/MacOS/${{ env.EXECUTABLE_NAME }}
         otool -L ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app/Contents/MacOS/${{ env.EXECUTABLE_NAME }}
         mv ${{ env.ZIP_NAME }}/lib ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app/Contents/MacOS
+        create-dmg "${{ env.EXECUTABLE_NAME }}.dmg" "${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app"
 
     # - name: Copy missing dylibs (g++)
     #   shell: bash
@@ -41,6 +42,7 @@ runs:
     #     # not sure about these - SFML might not support GCC on macOS
     #     ls -1 ${{ env.ZIP_NAME }}/lib | grep framework | xargs -I% ls ${{ env.ZIP_NAME }}/lib/%/Versions/A | grep -v "Resources" | xargs -I% install_name_tool -change @rpath/../Frameworks/%.framework/Versions/A/% @executable_path/lib/%.framework/Versions/A/% ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app/Contents/MacOS/${{ env.EXECUTABLE_NAME }}
     #     mv ${{ env.ZIP_NAME }}/lib ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app/Contents/MacOS
+    #     create-dmg "${{ env.EXECUTABLE_NAME }}.dmg" "${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}.app"
 
     - name: Copy missing dlls
       shell: bash
