--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -28,6 +28,12 @@ runs:
       run: |
           cp ${{ env.EXECUTABLE_NAME }}-*-win64.exe ${{ env.EXECUTABLE_NAME }}_${{ env.TAG_NAME }}_${{ env.BUILD_TYPE }}_${{ matrix.cxx }}${{ matrix.asan_name }}.exe
 
+    - name: Add macOS installer
+      shell: bash
+      if: runner.os == 'macOS'
+      run: |
+          cp "${{ env.EXECUTABLE_NAME }}.dmg" ${{ env.EXECUTABLE_NAME }}_${{ env.TAG_NAME }}_${{ env.BUILD_TYPE }}_${{ matrix.cxx }}${{ matrix.asan_name }}.dmg
+
     - name: Archive Release
       uses: thedoctor0/zip-release@master
       if: startsWith(github.ref, 'refs/tags/')
@@ -52,3 +58,9 @@ runs:
       if: startsWith(github.ref, 'refs/tags/') && runner.os == 'Windows' && matrix.cxx == 'g++'
       with:
         file: ${{ env.EXECUTABLE_NAME }}_${{ env.TAG_NAME }}_${{ env.BUILD_TYPE }}_${{ matrix.cxx }}${{ matrix.asan_name }}.exe
+
+    - name: Generate artifact attestation and upload to release (macOS installer)
+      uses: ./.github/actions/create-release-common
+      if: startsWith(github.ref, 'refs/tags/') && runner.os == 'macOS'
+      with:
+        file: ${{ env.EXECUTABLE_NAME }}_${{ env.TAG_NAME }}_${{ env.BUILD_TYPE }}_${{ matrix.cxx }}${{ matrix.asan_name }}.dmg
