--- a/.github/actions/install-packages/action.yml
+++ b/.github/actions/install-packages/action.yml
@@ -43,3 +43,9 @@ runs:
       run: |
         # sudo apt-get update
         sudo apt-get install --no-install-recommends valgrind
+
+    - name: Install create-dmg
+      shell: bash
+      if: runner.os == 'macOS'
+      run: |
+        brew install create-dmg
