Move more logic to cmake

--- a/.github/actions/process-artifacts/action.yml
+++ b/.github/actions/process-artifacts/action.yml
@@ -22,7 +22,7 @@ runs:
         fi
         # ls -1 artifacts/lib | grep framework | xargs -I% ls artifacts/lib/%/Versions/A | grep -v "Resources" | xargs -I% cp artifacts/lib/%.framework/% lib
         # ls -1 artifacts/lib | grep framework | xargs -I% ls artifacts/lib/%/Versions/A | grep -v "Resources" | xargs -I% install_name_tool -change @rpath/../Frameworks/%.framework/Versions/A/% @executable_path/lib/% ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}
-        mv artifacts/lib ${{ env.ZIP_NAME }}/
+        # mv artifacts/lib ${{ env.ZIP_NAME }}/
         otool -L ${{ env.ZIP_NAME }}/${{ env.EXECUTABLE_NAME }}
 
     # - name: Copy missing dylibs (g++)
